# malwares-collection

./: README.md  Trojan-Spy.Win32.VBStat.h  tasm.bat  viruses-2010-05-18.tar.bz2-34ebe49a48aa532deb9c0dd08a08a017aa04d810.torrent
Binary/C-CPP-Go-Rust/Backdoor/Linux/Backdoor.Linux.Q/libmix-v1.22/: Makefile.in  acconfig.h  configure.in  md5.sh
Binary/C-CPP-Go-Rust/Backdoor/Linux/Backdoor.Linux.Q/libmix-v1.22/aes/: aes.c  mars.c  rijndael.c  saferp.c  twofish.c
Binary/C-CPP-Go-Rust/Backdoor/Linux/Backdoor.Linux.Q/libmix-v1.22/mix/: aes.h
Binary/C-CPP-Go-Rust/Backdoor/Linux/Backdoor.Linux.Q/libmix-v1.22/net/: net.c
Binary/C-CPP-Go-Rust/Backdoor/Linux/Backdoor.Linux.Q/libmix-v1.22/test/: iplist.txt  libtest2.c
Binary/Unknown-ASM/: RC-632.ASM  TCH-3604.ASM  TCH-3604.MAC  gbmonkey.asm  knork.asm
Script/: EICAR-Test-File  Net-Worm.Win32.Randon.al  Trojan.ANSI.Error32  Trojan.ANSI.Spehelp  Trojan.Win32.Qhost.agb  Trojan.Win32.Qhost.js  Trojan.Win32.Qhost.ks  Trojan.Win32.StartPage.t  Worm.Win32.AutoIt.t  Worm.Win32.Feebs.gg
Script/Auto2Exe/: Backdoor.Win32.AutoIt.b.au3  Backdoor.Win32.IRCBot.acv.au3  Backdoor.Win32.IRCBot.crk.au3  Backdoor.Win32.IRCBot.ctv.au3  Email-Worm.Win32.AutoIt.a.au3  Hoax.Win32.BadJoke.Autoit.b.au3  Hoax.Win32.BadJoke.Autoit.c.au3  Hoax.Win32.BadJoke.Autoit.h.au3  IM-Worm.Win32.Agent.d.au3  IM-Worm.Win32.AutoIt.f.au3  IM-Worm.Win32.Qucan.h.au3  IM-Worm.Win32.Sohanad.as.au3  IM-Worm.Win32.Sohanad.av.au3  IM-Worm.Win32.Sohanad.ax.au3  IM-Worm.Win32.Sohanad.bd.au3  IM-Worm.Win32.Sohanad.bg.au3  IM-Worm.Win32.Sohanad.bh.au3  IM-Worm.Win32.Sohanad.ca.au3  IM-Worm.Win32.Sohanad.ck.au3  IM-Worm.Win32.Sohanad.cz.au3  IM-Worm.Win32.Sohanad.dm.au3  IM-Worm.Win32.Sohanad.nn.au3  IM-Worm.Win32.Sohanad.nr.au3  IM-Worm.Win32.Sohanad.ns.au3  IM-Worm.Win32.Sohanad.r.au3  Trojan-Clicker.Win32.AutoIt.a.au3  Trojan-Spy.Win32.DiabloII.h.au3  Trojan.Win32.Autoit.ad.au3  Trojan.Win32.Autoit.ah.au3  Trojan.Win32.Autoit.bn.au3  Trojan.Win32.Autoit.cv.au3  Trojan.Win32.DNSChanger.iy.au3  Trojan.Win32.KillApp.ac.au3  Trojan.Win32.Qhost.ng.au3  Trojan.Win32.Qhost.zw.au3  Trojan.Win32.Shutdowner.l.au3  Virus.Win32.AutoIt.g.au3  Worm.Win32.AutoIt.ac.au3  Worm.Win32.AutoIt.u.au3  Worm.Win32.AutoRun.te.au3
Script/Autorun/: Trojan.Win32.AutoRun.x.inf
Script/BAT/: Trojan-DownloaderTrojan-Downloader.BAT.Ftp.fh.bat  Trojan-DownloaderTrojan-Downloader.BAT.Ftp.gj.bat  Trojan.WinREG.Changepas.bat  TrojanTrojan.BAT.Pingofdeath.a.bat  TrojanTrojan.BAT.Zapchast.k.bat
Script/IRC/: Backdoor.IRC.Mimic.a.ini  Email-Worm.Win32.Alcaul.n.ini  Email-Worm.Win32.Youg.ini
Script/JS/: Constructor.Script.IBBM.a.js  Constructor.Script.IBBM.b.js  Trojan-FakeAV.JS.Macoed.ab.js  Trojan-FakeAV.JS.Macoed.ap.js  Trojan-FakeAV.JS.Macoed.at.js  Trojan-FakeAV.JS.Macoed.k.js  UDS-Exploit.JS.PDFDrop.g.js  UDS-Exploit.JS.Pdfka.bso.js  VirTool.JS.Yape.js  (+12 more)
Tools/: Decrypt-VBS-Files.frm  Vba-Doc-Export.cls  compile32.bat  tasm.bat
new/: Virus.DOS.Mango.468.asm
(+37957 files in other folders)
